<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".ui.view.fragments.ShoeDetailFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivShoeBrandLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintTop_toTopOf="@+id/ivBack" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCart"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivBack"
        app:srcCompat="@drawable/ic_bag_selected"
        app:tint="@color/black" />

    <TextView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/main_yellow"
        android:elevation="2dp"
        android:fontFamily="@font/poppins_medium"
        android:text="3"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/ivCart"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/ivCart"
        app:layout_constraintTop_toTopOf="@+id/ivCart" />

    <TextView
        android:id="@+id/tvShoeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tvRating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBack"
        tools:text="Air Jordan 1 Mid" />

    <TextView
        android:id="@+id/tvShoeCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/grey_mid_2"
        app:layout_constraintEnd_toEndOf="@+id/tvShoeName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShoeName"
        tools:text="Mens Shoes" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_border"
        android:backgroundTint="@color/light_grey_2"
        android:fontFamily="@font/poppins_semibold"
        android:includeFontPadding="false"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvShoeName"
        tools:text="⭐ 4.5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBgOrangeDots"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:maxHeight="100dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ivBgOrange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShoeCategory"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_shoe_detail_circles" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBgOrange"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvShoeCurrPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShoeCategory"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_shoes_detail_orange" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivShoeBrand"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:adjustViewBounds="true"
        android:maxWidth="160dp"
        app:layout_constraintBottom_toTopOf="@+id/tvShoeCurrPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/color_f2f2f2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivShoe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/tvShoeCurrPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShoeCategory" />

    <TextView
        android:id="@+id/tvShoeCurrPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/tvShoeDiscount"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="12400" />

    <TextView
        android:id="@+id/tvShoeActPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:textColor="@color/grey_mid_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvShoeDiscount"
        app:layout_constraintStart_toEndOf="@+id/tvShoeCurrPrice"
        tools:text="12400" />

    <TextView
        android:id="@+id/tvShoeDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvShoeDesc"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="25%OFF" />

    <TextView
        android:id="@+id/tvShoeDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/shoe_detail_desc"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rounded"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="12dp"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp"
        app:backgroundTint="@color/light_grey_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuyNow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBuyNow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rounded"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="12dp"
        android:text="@string/buy_now"
        android:textAllCaps="false"
        android:textSize="@dimen/sixteen_sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCart" />

</androidx.constraintlayout.widget.ConstraintLayout>